--- a/README
+++ b/README
@@ -1,6 +1,10 @@
-CodeIgniter Wisard
+# CodeIgniter Wisard
 
 Wisard is a Weighless neural network model !
 
 The WISARD is a popular weightless neural network model. It was developed during the 70s by Aleksander and Stonham (see survey). As more classical neural networks models like backpropagation, it is as a general pattern recognition machine, but using a somewhat different way of representing its acquired internal "knowledge". The weightless neural networks uses explicit storage elements to keep its state, rather than in its inter-element connections, as more conventional networks do.
-The basic element of a WISARD neural net is the neuron, or node, which is a simple RAM memory that stores the occurrence of the patterns ("tuples") it has been presented with. It could be seen that the RAM neuron is limited to learn binary patterns (which is the memory's address word), its output is also binary, and it does not exhibit generalization: it cannot accept a tuple which is different from the ones it had learned in the past. Some advantages the RAM neuron have over conventional neurons are the "one-shot" training, that is, the ability to learn from a sample on a single pass, and the persistence of the neuron training, which means that the training with new samples doesn't break the "knowledge" already stored in it. 
+The basic element of a WISARD neural net is the neuron, or node, which is a simple RAM memory that stores the occurrence of the patterns ("tuples") it has been presented with. It could be seen that the RAM neuron is limited to learn binary patterns (which is the memory's address word), its output is also binary, and it does not exhibit generalization: it cannot accept a tuple which is different from the ones it had learned in the past. Some advantages the RAM neuron have over conventional neurons are the "one-shot" training, that is, the ability to learn from a sample on a single pass, and the persistence of the neuron training, which means that the training with new samples doesn't break the "knowledge" already stored in it.
+
+This implemantation was made in PHP to be used in CodeIgniter Framework, for a small project.
+
+## This code is not beeing maintaned!
